--- a/about.html
+++ b/about.html
@@ -1,27 +1,264 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About | Car Shop Kenya</title>
-        <link rel="stylesheet" href="Styles/style.css">
-    </head>
-    <body>
-        <aside class="sidebar" id="sidebar">
-            <h2>🚗 Car Shop</h2>
-            <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-            </nav>
-        </aside>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn about Car Shop Kenya - Over 10 years of experience in providing quality cars and exceptional service in Nairobi, Kenya.">
+    <meta name="keywords" content="about car shop kenya, car dealership nairobi, car dealer experience, quality cars kenya">
+    <title>About Us - Car Shop Kenya | Your Trusted Car Dealer in Nairobi</title>
+    
+    <!-- CSS Files -->
+    <link rel="stylesheet" href="Styles/style.css">
+</head>
+<body>
+    <!-- Header and Navigation -->
+    <header>
+        <nav class="container">
+            <a href="index.html" class="logo">🏎️ Car Shop Kenya</a>
+            <ul class="nav-links" id="navLinks">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html" class="active">About</a></li>
+                <li><a href="cars.html">Cars</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="portfolio.html">portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
+    </header>
 
-        <header class="fade-in"><button id="toggleBtn">☰</button><h1>About Us</h1></header>
-        <main class ="fade-in">
-            <p>Car Shop Kenya has been delivering top-quality cars for over a decade. Our mission is to make car ownership affordable and exciting.</p>
-        </main>
-        <footer><p>&copy; 2025 Car Shop Kenya</p></footer>
-        <script src="Scripts/script.js"></script>
-    </body>
+    <main>
+        <!-- Page Header -->
+        <section class="page-header">
+            <div class="container">
+                <h1>About Car Shop Kenya</h1>
+                <p>Your trusted partner in finding the perfect vehicle since 2014. Quality cars, honest prices, exceptional service.</p>
+            </div>
+        </section>
+
+        <!-- Company Story Section -->
+    <section class="container section-padding">
+            <div class="grid grid-2 story-grid">
+                <div>
+                    <h2 class="story-title">Our Story</h2>
+                    <p class="story-desc">
+                        Founded in 2014 by automotive enthusiast Danny Ngatia, Car Shop Kenya began as a small family business with a simple mission: to provide quality, affordable vehicles to the people of Kenya while delivering exceptional customer service.
+                    </p>
+                    <p class="story-desc">
+                        What started with just 5 cars in a small lot in Westlands has grown into one of Nairobi's most trusted car dealerships, with over 100 vehicles in inventory and thousands of satisfied customers across Kenya.
+                    </p>
+                    <p class="story-desc">
+                        Today, we continue to uphold our founding principles: transparency, quality, and putting our customers first in every transaction.
+                    </p>
+                </div>
+                <div class="story-img-wrap">
+                    <div class="story-img">
+                        <video autoplay muted loop playsinline class="bg-video">
+                            <source src="https://www.pexels.com/download/video/5992517/" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Mission & Vision Section -->
+    <section class="section-bg section-padding">
+            <div class="container">
+                <div class="grid grid-2">
+                    <div class="card mission-card">
+                        <div class="mission-icon">🎯</div>
+                        <h3 class="mission-title">Our Mission</h3>
+                        <p>To provide quality, reliable, and affordable vehicles to every Kenyan family while delivering exceptional customer service that exceeds expectations. We believe everyone deserves access to safe, dependable transportation.</p>
+                    </div>
+                    <div class="card mission-card">
+                        <div class="mission-icon">🌟</div>
+                        <h3 class="mission-title">Our Vision</h3>
+                        <p>To be East Africa's most trusted car dealership, known for our integrity, quality assurance, and commitment to helping customers make informed vehicle purchasing decisions that enhance their lives.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Values Section -->
+    <section class="container section-padding">
+            <h2 class="text-center section-title">Our Core Values</h2>
+            <div class="grid grid-3">
+                <div class="card value-card">
+                    <div class="value-icon">🤝</div>
+                    <h3 class="value-title">Integrity</h3>
+                    <p>We believe in honest, transparent dealings. Every car comes with a detailed history report, and we never hide costs or issues.</p>
+                </div>
+                <div class="card value-card">
+                    <div class="value-icon">✅</div>
+                    <h3 class="value-title">Quality</h3>
+                    <p>Every vehicle undergoes our rigorous 150-point inspection before being offered for sale. We stand behind the quality of our cars.</p>
+                </div>
+                <div class="card value-card">
+                    <div class="value-icon">❤️</div>
+                    <h3 class="value-title">Customer Focus</h3>
+                    <p>Your satisfaction is our priority. We listen to your needs and work tirelessly to find the perfect vehicle for your lifestyle and budget.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Team Section -->
+    <section class="section-bg section-padding">
+            <div class="container">
+                <h2 class="text-center section-title">Meet Our Team</h2>
+                <div class="grid grid-3">
+                    <div class="card team-card">
+                        <div class="team-img">👨‍💼</div>
+                        <h3 class="team-title">Danny Ngatia</h3>
+                        <p class="team-role"><strong>Founder & CEO</strong></p>
+                        <p>With over 15 years in the automotive industry, James founded Car Shop Kenya with a vision to revolutionize car buying in Kenya.</p>
+                    </div>
+                    <div class="card team-card">
+                        <div class="team-img team-img-alt">👩‍💼</div>
+                        <h3 class="team-title">Grace Wanjiku</h3>
+                        <p class="team-role"><strong>Sales Manager</strong></p>
+                        <p>Grace leads our sales team with 8 years of experience in automotive sales. She's passionate about matching customers with their perfect car.</p>
+                    </div>
+                    <div class="card team-card">
+                        <div class="team-img">👨‍🔧</div>
+                        <h3 class="team-title">Peter Kamau</h3>
+                        <p class="team-role"><strong>Chief Mechanic</strong></p>
+                        <p>Peter oversees our inspection process and ensures every car meets our high-quality standards before reaching customers.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Achievements Section -->
+    <section class="container section-padding achievements-section">
+            <h2 class="text-center section-title">Our Achievements</h2>
+            <div class="grid grid-2 achievements-grid">
+                <div>
+                    <div class="grid grid-2 achievements-stats">
+                        <div class="achievement-card">
+                            <div class="achievement-value">5000+</div>
+                            <p class="achievement-label">Happy Customers</p>
+                        </div>
+                        <div class="achievement-card">
+                            <div class="achievement-value">10+</div>
+                            <p class="achievement-label">Years Experience</p>
+                        </div>
+                        <div class="achievement-card">
+                            <div class="achievement-value">100+</div>
+                            <p class="achievement-label">Cars in Stock</p>
+                        </div>
+                        <div class="achievement-card">
+                            <div class="achievement-value">98%</div>
+                            <p class="achievement-label">Satisfaction Rate</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="awards-title">Awards & Recognition</h3>
+                    <div class="award-item">
+                        <h4>🏆 Best Car Dealership 2023</h4>
+                        <p class="award-label">Nairobi Business Awards</p>
+                    </div>
+                    <div class="award-item">
+                        <h4>⭐ Customer Service Excellence 2022</h4>
+                        <p style="color: #666;">Kenya Motor Industry Association</p>
+                    </div>
+                    <div style="margin-bottom: 1.5rem;">
+                        <h4>🌟 Top Rated Dealership 2021</h4>
+                        <p style="color: #666;">Automotive News Kenya</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Testimonials Section -->
+        <section style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 80px 0;">
+            <div class="container">
+                <h2 class="text-center" style="margin-bottom: 3rem;">What Our Customers Say</h2>
+                <div class="testimonial-slider">
+                    <div class="testimonial-slide" style="text-align: center; max-width: 600px; margin: 0 auto;">
+                        <div style="font-size: 3rem; margin-bottom: 1rem;">💬</div>
+                        <p style="font-size: 1.2rem; line-height: 1.6; margin-bottom: 2rem; font-style: italic;">"Car Shop Kenya made buying my first car so easy! Their team was patient, honest, and helped me find exactly what I needed within my budget. Highly recommended!"</p>
+                        <div>
+                            <strong>Sarah Njeri</strong>
+                            <p style="opacity: 0.8;">Teacher, Nairobi</p>
+                        </div>
+                    </div>
+                    <div class="testimonial-slide" style="text-align: center; max-width: 600px; margin: 0 auto; display: none;">
+                        <div style="font-size: 3rem; margin-bottom: 1rem;">💬</div>
+                        <p style="font-size: 1.2rem; line-height: 1.6; margin-bottom: 2rem; font-style: italic;">"I've bought three cars from Car Shop Kenya over the years. Their quality inspection process is thorough, and I've never had any surprises. They're my go-to for all automotive needs."</p>
+                        <div>
+                            <strong>David Ochieng</strong>
+                            <p style="opacity: 0.8;">Business Owner, Mombasa</p>
+                        </div>
+                    </div>
+                    <div class="testimonial-slide" style="text-align: center; max-width: 600px; margin: 0 auto; display: none;">
+                        <div style="font-size: 3rem; margin-bottom: 1rem;">💬</div>
+                        <p style="font-size: 1.2rem; line-height: 1.6; margin-bottom: 2rem; font-style: italic;">"The financing options they provided made it possible for me to get my dream car. The staff was professional and guided me through every step of the process."</p>
+                        <div>
+                            <strong>Mary Wambui</strong>
+                            <p style="opacity: 0.8;">Engineer, Kisumu</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Call to Action -->
+        <section class="container" style="padding: 60px 0; text-align: center;">
+            <h2 style="margin-bottom: 1rem;">Ready to Experience the Difference?</h2>
+            <p style="color: #666; margin-bottom: 2rem; max-width: 600px; margin-left: auto; margin-right: auto;">
+                Join the thousands of satisfied customers who have found their perfect car with Car Shop Kenya. 
+                Let us help you find yours today.
+            </p>
+            <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+                <a href="cars.html" class="btn btn-primary">Browse Our Cars</a>
+                <a href="contact.html" class="btn btn-secondary">Contact Us Today</a>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>🏎️ Car Shop Kenya</h3>
+                    <p>Your trusted partner in finding the perfect vehicle. Quality cars, honest prices, exceptional service.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <p><a href="about.html">About Us</a></p>
+                    <p><a href="cars.html">Our Cars</a></p>
+                    <p><a href="services.html">Services</a></p>
+                    <p><a href="contact.html">Contact</a></p>
+                </div>
+                <div class="footer-section">
+                    <h3>Services</h3>
+                    <p><a href="services.html#financing">Car Financing</a></p>
+                    <p><a href="services.html#warranty">Extended Warranty</a></p>
+                    <p><a href="services.html#trade">Trade-In</a></p>
+                    <p><a href="services.html#maintenance">Maintenance</a></p>
+                </div>
+                <div class="footer-section">
+                    <h3>Contact Info</h3>
+                    <p>📍 PLP, Nairobi, Kenya</p>
+                    <p>📞 +254 700 111 222</p>
+                    <p>📧 info@carshopkenya.com</p>
+                    <p>🕒 Mon-Sat: 8AM-6PM</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Car Shop Kenya. All rights reserved. | Designed with ❤️ for car enthusiasts</p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- JavaScript Files -->
+    <script src="js/main.js"></script>
+    <script src="js/form-validation.js"></script>
+</body>
 </html>
